--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mjml",
-  "version": "1.2.1",
+  "version": "1.0",
   "description": "MJML: the only framework that makes responsive-email easy",
   "main": "./lib/mjml",
   "scripts": {
@@ -84,6 +84,6 @@
     "react": "^0.14.3",
     "react-addons-perf": "^0.14.3",
     "react-dom": "0.14.2",
-    "mjml": "https://github.com/SomewhatJustin/mjml/tarball/0d5c0f776faf20c574cd9bd91252b8fa0349a746"
+    "mjml": "1.2.1"
   }
 }
