--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "mocha": "^2.3.4"
   },
   "dependencies": {
+    "mjml": "^1.2.1",
     "commander": "^2.9.0",
     "html-minify": "^0.3.1",
     "cheerio": "^0.19.0",
@@ -83,7 +84,6 @@
     "lodash": "^4.0.1",
     "react": "^0.14.3",
     "react-addons-perf": "^0.14.3",
-    "react-dom": "0.14.2",
-    "mjml": "1.2.1"
+    "react-dom": "0.14.2"
   }
 }
