--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
     "mocha": "^2.3.4"
   },
   "dependencies": {
-    "mjml": "^1.2.1",
+    "mjml": "SomewhatJustin/mjml",
+    "mjml" : "*",
     "commander": "^2.9.0",
     "html-minify": "^0.3.1",
     "cheerio": "^0.19.0",
